--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -11,7 +11,7 @@
         <StackPanel HorizontalAlignment="Center" x:Name="ParentPanel">
             <Image HorizontalAlignment="Center" Source="avares://MoSpeedUI/Assets/Images/mospeed.png" x:Name="MoSpeedLogo"></Image>
             <TextBlock HorizontalAlignment="Center" FontSize="24" FontWeight="Medium" TextAlignment="Center" TextWrapping="WrapWithOverflow" Text="{x:Static lang:Resources.IntroText}" />
-                <StackPanel HorizontalAlignment="Left" x:Name="ControlPanel" Margin="0,20,0,0">
+                <StackPanel HorizontalAlignment="Center" x:Name="ControlPanel" Margin="0,20,0,0">
                     <StackPanel x:Name="Step1">
                         <TextBlock FontWeight="Bold" FontSize="26" Text="{x:Static lang:Resources.Step1}"/>
                         <Border Background="Gainsboro"
@@ -21,6 +21,8 @@
                                 Padding="10" Margin="0,10,0,10" x:Name="DragBox" DragDrop.AllowDrop="True">
                             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="DragText" Text="{x:Static lang:Resources.DragBox}" Padding="0,25,0,25"/>
                         </Border>
+                        <TextBlock Text="{x:Static lang:Resources.FileListDesc}"/>
+                        <StackPanel x:Name="FileListPanel"></StackPanel>
                     </StackPanel>
                 </StackPanel>
         </StackPanel>
