--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -24,6 +24,31 @@
                         <TextBlock Text="{x:Static lang:Resources.FileListDesc}"/>
                         <StackPanel x:Name="FileListPanel"></StackPanel>
                     </StackPanel>
+                    <StackPanel x:Name="Step2" Margin="0,10,0,10">
+                        <TextBlock FontWeight="Bold" FontSize="26" Text="{x:Static lang:Resources.Step2}"/>
+                        <WrapPanel>
+                            <StackPanel>
+                                <TextBlock Text="{x:Static lang:Resources.TargetPlatform}" Margin="0,0,0,4"/>
+                                <ComboBox SelectedIndex="-1" x:Name="PlatformSelect">
+                                    <ComboBoxItem>C64</ComboBoxItem>
+                                    <ComboBoxItem>VIC 20/VC 20</ComboBoxItem>
+                                    <ComboBoxItem>Commander X16 (r38)</ComboBoxItem>
+                                </ComboBox>
+                            </StackPanel>
+                            <StackPanel Margin="8,0,0,0" x:Name="PlatformConf">
+                                <TextBlock Text="{x:Static lang:Resources.PlatformSpecific}" Margin="0,0,0,4"/>
+                                <Panel x:Name="C64Conf">
+                                   <CheckBox Content="{x:Static lang:Resources.C64Specific}"/>
+                                </Panel>
+                                <Panel x:Name="Vc20Conf">
+                                    <TextBlock>Vc</TextBlock>
+                                </Panel>
+                                <Panel x:Name="X16Conf">
+                                    <TextBlock>X16</TextBlock>
+                                </Panel>
+                            </StackPanel>
+                        </WrapPanel>
+                    </StackPanel>
                 </StackPanel>
         </StackPanel>
     </Panel>
