--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -31,23 +31,21 @@
                     <StackPanel x:Name="Step2" Margin="0,10,0,10">
                         <TextBlock FontWeight="Bold" FontSize="26" Text="{x:Static lang:Resources.Step2}"/>
                         
-                        <WrapPanel>
-                            <StackPanel>
-                                <TextBlock Text="{x:Static lang:Resources.TargetPlatform}" Margin="0,0,0,4"/>
-                                <ComboBox SelectedIndex="-1" x:Name="PlatformSelect">
-                                    <ComboBoxItem>C64</ComboBoxItem>
-                                    <ComboBoxItem>VIC 20/VC 20</ComboBoxItem>
-                                    <ComboBoxItem>Commander X16 (r38)</ComboBoxItem>
-                                </ComboBox>
-                            </StackPanel>
+                        <Grid ColumnDefinitions="*, *" RowDefinitions="*, *" Margin="0,0,0,10">
+                            <TextBlock Grid.Row="0" Grid.Column="0" Text="{x:Static lang:Resources.TargetPlatform}" Margin="0,0,0,4"/>
+                            <ComboBox Grid.Row="1" Grid.Column="0" SelectedIndex="-1" x:Name="PlatformSelect">
+                                <ComboBoxItem>C64</ComboBoxItem>
+                                <ComboBoxItem>VIC 20/VC 20</ComboBoxItem>
+                                <ComboBoxItem>Commander X16 (r38)</ComboBoxItem>
+                            </ComboBox>
                             
-                            <StackPanel Margin="8,0,0,0" x:Name="PlatformConf">
-                                <TextBlock Text="{x:Static lang:Resources.PlatformSpecific}" Margin="0,0,0,4"/>
-                                <Panel x:Name="C64Conf">
+                            <Grid Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" ColumnDefinitions="*" RowDefinitions="Auto, *, *" Margin="8,0,0,0" x:Name="PlatformConf">
+                                <TextBlock Grid.Row="0" Text="{x:Static lang:Resources.PlatformSpecific}" Margin="0,0,0,4"/>
+                                <Panel Grid.Row="1" x:Name="C64Conf">
                                    <CheckBox Content="{x:Static lang:Resources.C64Specific}"/>
                                 </Panel>
                                 
-                                <Panel x:Name="Vc20Conf">
+                                <Panel Grid.Row="1" x:Name="Vc20Conf">
                                     <StackPanel>
                                         <TextBlock Text="{x:Static lang:Resources.MemoryConfig}" Margin="0,0,0,4"/>
                                         <ComboBox SelectedIndex="1" x:Name="Vc20ConfBox">
@@ -58,11 +56,11 @@
                                     </StackPanel>
                                 </Panel>
                                 
-                                <Panel x:Name="X16Conf">
+                                <Panel Grid.Row="1" x:Name="X16Conf">
                                     <TextBlock Text="{x:Static lang:Resources.X16PlatformConfig}"/>
                                 </Panel>
-                            </StackPanel>
-                        </WrapPanel>
+                            </Grid>
+                        </Grid>
                         <Grid ColumnDefinitions="Auto, *" RowDefinitions="Auto, Auto, Auto, Auto" ShowGridLines="False">
                             <Label Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" Margin="0,0,6,0" Content="{x:Static lang:Resources.ProgramStart}" Target="ProgramStartAdd"/>
                             <TextBox Margin="4" Grid.Column="1" Grid.Row="0" VerticalAlignment="Center" x:Name="ProgramStartAdd" Watermark="{x:Static lang:Resources.DecimalOrHexWDefault}"/>
