--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -119,7 +119,8 @@
                     <!--Step 3 END!-->
                     <StackPanel x:Name="Step4" Margin="0,16,0,0">
                         <Button x:Name="CompileBtn" Click="CompileBtn_OnClick" Margin="0,0,0,4" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" Content="{x:Static lang:Resources.Compile}"/>
-                        <Button Margin="0" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" Content="{x:Static lang:Resources.Advanced}"/>
+                        <Button Margin="0,0,0,4" x:Name="AdvSettings" Click="AdvSettings_OnClick" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" Content="{x:Static lang:Resources.Advanced}"/>
+                        <TextBlock Text="{x:Static lang:Resources.About}" x:Name="AboutLink" HorizontalAlignment="Center" TextDecorations="Underline" Foreground="Blue" PointerPressed="AboutLink_OnPointerPressed"/>
                     </StackPanel>
                 </StackPanel>
         </StackPanel>
