--- a/CompilerWindow.axaml
+++ b/CompilerWindow.axaml
@@ -14,6 +14,6 @@
         <Panel Grid.Row="2">
             <TextBox AcceptsReturn="True" TextWrapping="Wrap" IsReadOnly="True" HorizontalAlignment="Stretch" x:Name="CompileOut"/>
         </Panel>
-        <Button x:Name="ClsBtn" Grid.Row="3" Margin="0,8,0,0" IsEnabled="False" Click="Button_OnClick" Content="{x:Static lang:Resources.Close}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center"/>
+        <Button x:Name="ClsBtn" Grid.Row="3" Margin="0,8,0,0" Click="Button_OnClick" Content="{x:Static lang:Resources.Close}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center"/>
     </Grid>
 </Window>
