--- a/SetupWindow.axaml
+++ b/SetupWindow.axaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="MoSpeedUI.SetupWindow"
         Title="Setup">
-    <StackPanel Margin="8">
+    <StackPanel Margin="8" x:Name="ParentPanel">
         <TextBlock FontWeight="Medium" FontSize="24" Text="{x:Static lang:Resources.Welcome}"/>
         <TextBlock TextWrapping="Wrap" Text="{x:Static lang:Resources.SetupText}"/>
         <StackPanel Margin="0,6,0,0">
@@ -17,7 +17,6 @@
         <StackPanel x:Name="Step2A" IsVisible="False">
             <TextBlock FontWeight="Bold" FontSize="20" Text="{x:Static lang:Resources.SetupStep2a}"/>
             <Button x:Name="DwnldBtn" Click="DwnldBtn_OnClick" Content="{x:Static lang:Resources.DwnldMSBtn}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center"/>
-            <ProgressBar Margin="0,4,0,0" x:Name="DwnldBar" IsVisible="False"></ProgressBar>
         </StackPanel>
         <StackPanel x:Name="Step2B" IsVisible="False">
             <TextBlock FontWeight="Bold" FontSize="20" Text="{x:Static lang:Resources.SetupStep2b}"/>
@@ -27,5 +26,6 @@
             </StackPanel>
             <Button Click="FinishSetupBtn_OnClick" x:Name="FinishSetupBtn" Margin="0,8,0,0" Content="{x:Static lang:Resources.FinishSetup}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center"/>
         </StackPanel>
+        <ProgressBar Margin="0,4,0,0" x:Name="DwnldBar" IsVisible="False"></ProgressBar>
     </StackPanel>
 </Window>
