--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -120,7 +120,8 @@
                     <StackPanel x:Name="Step4" Margin="0,16,0,0">
                         <Button x:Name="CompileBtn" Click="CompileBtn_OnClick" Margin="0,0,0,4" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" Content="{x:Static lang:Resources.Compile}"/>
                         <Button Margin="0,0,0,4" x:Name="AdvSettings" Click="AdvSettings_OnClick" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" Content="{x:Static lang:Resources.Advanced}"/>
-                        <TextBlock Text="{x:Static lang:Resources.About}" x:Name="AboutLink" HorizontalAlignment="Center" TextDecorations="Underline" Foreground="Blue" PointerPressed="AboutLink_OnPointerPressed"/>
+                        <TextBlock Cursor="Hand" Text="{x:Static lang:Resources.About}" x:Name="AboutLink" HorizontalAlignment="Center" TextDecorations="Underline" Foreground="Blue" PointerPressed="AboutLink_OnPointerPressed"/>
+                        <TextBlock Cursor="Hand" Text="{x:Static lang:Resources.Settings}" x:Name="SettingsLink" HorizontalAlignment="Center" TextDecorations="Underline" Foreground="Blue" PointerPressed="SettingsLink_OnPointerPressed"/>
                     </StackPanel>
                 </StackPanel>
         </StackPanel>
